Name:                cqrs-core
Version:             0.11.0
Synopsis:            Command-Query Responsibility Segregation
Description:         Haskell implementation of the CQRS architectural pattern.
License:             MIT
License-file:        LICENSE
Category:            Data
Cabal-version:       >=1.10
Build-type:          Simple
Author:              Bardur Arantsson
Maintainer:          Bardur Arantsson <bardur@scientician.net>

Source-Repository head
  Type:     git
  Location: https://github.com/BardurArantsson/cqrs

Library
  Build-Depends:       base >= 4.9 && < 5
                     , bytestring >= 0.9.0.1
                     , bytestring-lexing >= 0.5 && < 0.6
                     , containers >= 0.5 && < 1
                     , deepseq >= 1.4 && < 2
                     , io-streams >= 1.2 && < 2
                     , time >= 1.8 && < 1.9
                     , transformers >= 0.5.2 && < 0.6
                     , unliftio-core >= 0.1.1.0 && < 0.2
  Default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  Exposed-modules:     Data.CQRS.Command
                       Data.CQRS.Repository
                       Data.CQRS.SnapshotStore
                       Data.CQRS.Internal.Aggregate
                       Data.CQRS.Internal.PersistedEvent
                       Data.CQRS.Internal.Repository
                       Data.CQRS.Internal.StreamPosition
                       Data.CQRS.Internal.UState
                       Data.CQRS.Types.AggregateAction
                       Data.CQRS.Types.Chunk
                       Data.CQRS.Types.Clock
                       Data.CQRS.Types.EventStore
                       Data.CQRS.Types.EventStream
                       Data.CQRS.Types.Iso
                       Data.CQRS.Types.PersistedEvent
                       Data.CQRS.Types.Snapshot
                       Data.CQRS.Types.SnapshotStore
                       Data.CQRS.Types.StoreError
                       Data.CQRS.Types.StreamPosition
