Name:                cqrs-postgresql
Version:             0.11.0
Synopsis:            PostgreSQL backend for the cqrs package.
Description:         PostgreSQL backend for the cqrs package.
License:             MIT
License-file:        LICENSE
Category:            Data
Cabal-version:       >=1.10
Build-type:          Simple
Author:              Bardur Arantsson
Maintainer:          Bardur Arantsson <bardur@scientician.net>

Source-Repository head
  Type:     git
  Location: https://github.com/BardurArantsson/cqrs

Library
  build-depends:      base >= 4.9 && < 5
                    , bytestring >= 0.9.0.1
                    , bytestring-lexing >= 0.5 && < 0.6
                    , cqrs-core >= 0.11.0 && < 0.12.0
                    , enclosed-exceptions >= 1.0.1 && < 2
                    , io-streams >= 1.2 && < 2
                    , lifted-base >= 0.2.3.8 && < 0.3
                    , monad-control >= 1.0.1 && < 1.1
                    , neat-interpolation >= 0.3.2 && < 0.4
                    , resource-pool >= 0.2.1 && < 0.3
                    , postgresql-libpq >= 0.9.0.1 && < 0.10
                    , text >= 1.0 && < 2
                    , transformers >= 0.5.2 && < 0.6
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  exposed-modules:    Data.CQRS.PostgreSQL
                      Data.CQRS.PostgreSQL.Metadata
                      Data.CQRS.PostgreSQL.Migrations
                      Data.CQRS.PostgreSQL.Internal.EventStore
                      Data.CQRS.PostgreSQL.Internal.EventStream
                      Data.CQRS.PostgreSQL.Internal.Migration
                      Data.CQRS.PostgreSQL.Internal.QueryError
                      Data.CQRS.PostgreSQL.Internal.Query
                      Data.CQRS.PostgreSQL.Internal.SnapshotStore
                      Data.CQRS.PostgreSQL.Internal.SqlValue
                      Data.CQRS.PostgreSQL.Internal.Tables
                      Data.CQRS.PostgreSQL.Internal.Transaction

Test-Suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src-test
  main-is:            Main.hs
  build-depends:      base == 4.*
                    , bytestring >= 0.9.0.1
                    , cqrs-core >= 0.11.0 && < 0.12.0
                    , cqrs-testkit >= 0.11.0 && < 0.12.0
                    , io-streams >= 1.2 && < 2
                    , pg-harness-client >= 0.4.0 && < 0.5.0
                    , postgresql-libpq >= 0.9.0.1 && < 0.10
                    , random >= 1.1 && < 2
                    , resource-pool >= 0.2.1 && < 0.3
                    , text >= 1.0 && < 2
                    , transformers >= 0.5.2 && < 0.6
                    -- Self-dependency
                    , cqrs-postgresql
                    -- Test framework:
                    , hspec >= 2.2.0 && < 3.0
  default-language:   Haskell2010
  ghc-options:        -Wall
  other-modules:      Data.CQRS.PostgreSQL.Internal.MigrationSpec
                      Data.CQRS.PostgreSQL.Internal.QuerySpec
