Name:                cqrs-postgresql
Version:             0.11.0
Synopsis:            PostgreSQL backend for the cqrs package.
Description:         PostgreSQL backend for the cqrs package.
License:             MIT
License-file:        LICENSE
Category:            Data
Cabal-version:       >=1.24
Build-type:          Simple
Author:              Bardur Arantsson
Maintainer:          Bardur Arantsson <bardur@scientician.net>

Source-Repository head
  Type:     git
  Location: https://github.com/BardurArantsson/cqrs

Library
  build-depends:      base >= 4.9 && < 5
                    , bytestring >= 0.9.0.1
                    , cqrs-core >= 0.11.0 && < 0.12.0
                    , peregrin >= 0.2.0 && < 0.3
                    , postgresql-simple >= 0.5.3.0 && < 0.6
                    , transformers >= 0.5.2 && < 0.6
                    , unliftio >= 0.2.4.0 && < 0.3
                    , unliftio-core >= 0.1.1.0 && < 0.2
                    , unliftio-streams >= 0.1 && < 0.2
                    , unliftio-pool >= 0.2.0.0 && < 0.3
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     src
  exposed-modules:    Data.CQRS.PostgreSQL
                      Data.CQRS.PostgreSQL.Migrations
                      Data.CQRS.PostgreSQL.Internal.EventStore
                      Data.CQRS.PostgreSQL.Internal.EventStream
                      Data.CQRS.PostgreSQL.Internal.Identifiers
                      Data.CQRS.PostgreSQL.Internal.Query
                      Data.CQRS.PostgreSQL.Internal.SnapshotStore
                      Data.CQRS.PostgreSQL.Internal.Transaction

Test-Suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     src-test
  main-is:            Main.hs
  build-depends:      base == 4.*
                    , bytestring >= 0.9.0.1
                    , cqrs-core >= 0.11.0 && < 0.12.0
                    , cqrs-testkit >= 0.11.0 && < 0.12.0
                    , pg-harness-client >= 0.4.0 && < 0.5.0
                    , postgresql-simple >= 0.5.2.1 && < 0.6
                    , random >= 1.1 && < 2
                    , resource-pool >= 0.2.1 && < 0.3
                    , transformers >= 0.5.2 && < 0.6
                    , unliftio-streams >= 0.1 && < 0.2
                    -- Self-dependency
                    , cqrs-postgresql
                    -- Test framework:
                    , hspec >= 2.2.0 && < 3.0
  default-language:   Haskell2010
  ghc-options:        -Wall
  other-modules:      Data.CQRS.PostgreSQL.Internal.QuerySpec
