Name:                foleni
Version:             0.1.0.0
Synopsis:            Concurrent queue bounded by element cost function
Description:         Concurrent queue bounded by element cost function
License:             MIT
License-file:        LICENSE
Category:            Data
Cabal-version:       >=1.24
Build-type:          Simple
Author:              Bardur Arantsson
Maintainer:          Bardur Arantsson <bardur@scientician.net>

Source-Repository head
  Type:     git
  Location: https://github.com/BardurArantsson/cqrs

Library
  Default-Language:    Haskell2010
  Ghc-Options:         -Wall
  Hs-Source-Dirs:      src
  Exposed-Modules:     Data.Foleni
                       Data.Foleni.Internal
  Build-Depends:       base >= 4.10 && < 5
                     , stm >= 2.4 && < 3
                     , unliftio-core >= 0.1.1.0 && < 0.2
