Name:                unliftio-streams
Version:             0.1.0.0
Synopsis:            Generalization of io-streams to MonadUnliftIO
Description:         Generalization of io-streams to MonadUnliftIO.
License:             MIT
License-file:        LICENSE
Category:            Data
Cabal-version:       >=1.24
Build-type:          Simple
Author:              Bardur Arantsson
Maintainer:          Bardur Arantsson <bardur@scientician.net>

Source-Repository head
  Type:     git
  Location: https://github.com/BardurArantsson/cqrs

Library
  Default-Language:    Haskell2010
  Ghc-Options:         -Wall
  Hs-Source-Dirs:      src
  Exposed-Modules:     UnliftIO.Streams
                       UnliftIO.Streams.Combinators
                       UnliftIO.Streams.Internal
                       UnliftIO.Streams.List
  Build-Depends:       base >= 4.10 && < 5
                     , io-streams >= 1.5.0.1 && < 2
                     , unliftio-core >= 0.1.1.0 && < 0.2
